--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "tweet-copy-detector",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "test": "node --test tests/*.test.mjs"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
