feat(saas-launch): add Lemon Squeezy billing flow and launch-ready pages
- add pricing/account/legal/contact pages

- add checkout API route backed by Lemon Squeezy

- add billing service + tests

- add home page nav/cta links and env template entries

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,10 @@
 # Gemini API Key for AI Analysis
 # Get your free key at: https://aistudio.google.com/app/apikey
 GEMINI_API_KEY=your_api_key_here
+
+# Lemon Squeezy Billing
+LEMONSQUEEZY_API_KEY=your_lemonsqueezy_api_key
+LEMONSQUEEZY_STORE_ID=your_store_id
+LEMONSQUEEZY_PRO_VARIANT_ID=your_pro_variant_id
+NEXT_PUBLIC_LEMONSQUEEZY_CUSTOMER_PORTAL_URL=https://your-store.lemonsqueezy.com/billing
+NEXT_PUBLIC_APP_URL=http://localhost:3000
