chore(env): document billing variants and search tuning variables

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,21 @@ GEMINI_API_KEY=your_api_key_here
 # Lemon Squeezy Billing
 LEMONSQUEEZY_API_KEY=your_lemonsqueezy_api_key
 LEMONSQUEEZY_STORE_ID=your_store_id
+LEMONSQUEEZY_PRO_MONTHLY_VARIANT_ID=your_pro_monthly_variant_id
+LEMONSQUEEZY_PRO_YEARLY_VARIANT_ID=your_pro_yearly_variant_id
+# Backward compatibility (optional fallback for monthly):
 LEMONSQUEEZY_PRO_VARIANT_ID=your_pro_variant_id
 NEXT_PUBLIC_LEMONSQUEEZY_CUSTOMER_PORTAL_URL=https://your-store.lemonsqueezy.com/billing
 NEXT_PUBLIC_APP_URL=http://localhost:3000
+
+# Search performance tuning (optional)
+# Lower values usually respond faster, but can reduce recall on hard queries.
+SEARCH_GLOBAL_TIMEOUT_MS=15000
+SEARCH_EARLY_STOP_THRESHOLD=8
+SEARCH_SOURCE_TIMEOUT_MS=4500
+SEARCH_SOURCE_TIMEOUT_MIN_MS=1500
+SEARCH_METRICS_TIMEOUT_MS=1800
+SEARCH_METRICS_MAX_ITEMS=6
+SEARCH_METRICS_CONCURRENCY=3
+SEARCH_CACHE_TTL_MS=120000
+SEARCH_CACHE_MAX_ENTRIES=200
