perf(search): add source-level cache and batched parallel fallback

--- a/.env.example
+++ b/.env.example
@@ -18,8 +18,11 @@ SEARCH_GLOBAL_TIMEOUT_MS=15000
 SEARCH_EARLY_STOP_THRESHOLD=8
 SEARCH_SOURCE_TIMEOUT_MS=4500
 SEARCH_SOURCE_TIMEOUT_MIN_MS=1500
+SEARCH_FALLBACK_PARALLEL_SOURCES=2
 SEARCH_METRICS_TIMEOUT_MS=1800
 SEARCH_METRICS_MAX_ITEMS=6
 SEARCH_METRICS_CONCURRENCY=3
 SEARCH_CACHE_TTL_MS=120000
 SEARCH_CACHE_MAX_ENTRIES=200
+SEARCH_SOURCE_CACHE_TTL_MS=90000
+SEARCH_SOURCE_CACHE_MAX_ENTRIES=600
