--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,12 @@ LEMONSQUEEZY_PRO_VARIANT_ID=your_pro_variant_id
 NEXT_PUBLIC_LEMONSQUEEZY_CUSTOMER_PORTAL_URL=https://your-store.lemonsqueezy.com/billing
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 
+# Upstash Redis (persistent caching + rate limiting)
+# Sign up free at: https://console.upstash.com
+# Leave blank for local dev (falls back to in-memory)
+UPSTASH_REDIS_REST_URL=
+UPSTASH_REDIS_REST_TOKEN=
+
 # Search performance tuning (optional)
 # Lower values usually respond faster, but can reduce recall on hard queries.
 SEARCH_GLOBAL_TIMEOUT_MS=15000
